[package]
name = "kplayer-go"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dependencies]
enum-display = "0.1.3"
libkplayer = { path = "../libkplayer" }
serde = "1.0.173"
serde_yaml = "0.9.24"
serde_json = "1.0.103"
log = "0.4.19"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
md5 = "0.7.0"
hex = "0.4.3"
rand = "0.8.5"
json5 = "0.4.1"
fern = { version = "0.6.2", features = ["colored", "chrono"] }
humantime = "2.1.0"
bus = "2.4.0"
actix-web = "4.3.1"
actix-rt = "2.8.0"
lazy_static = "1.4.0"
validator = { version = "0.18.1", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
jsonrpc_v2_client = "0.2.1"
anyhow = "1.0.86"
tokio = { version = "1.37.0", features = ["full"] }
env_logger = "0.11.3"
async-trait = "0.1.80"

rtmp = { path = "third-parts/xiu/protocol/rtmp" }
streamhub = { path = "third-parts/xiu/library/streamhub" }
