[package]
name = "kpapp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
validator = { version = "0.18.1", features = ["derive"] }
kpcodec = { path = "../kpcodec" }
kpscene = { path = "../kpscene" }
log = "0.4.22"
env_logger = "0.11.5"
dotenv = "0.15.0"
serde_json = "1.0.132"
serde = "1.0.211"
tokio = { version = "1.40.0", features = ["full"] }
