[package]
name = "kpscene"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
dotenv = "0.15.0"
async-trait = "0.1.82"
strum = "0.26.3"
strum_macros = "0.26.4"
wasmtime = { version = "25.0.1", features = ["async"] }
wasmtime-wasi = "25.0.1"
kpcodec = { path = "../kpcodec" }
serde_json = "1.0.128"
serde = { version = "1.0.204", features = ["derive"] }
derivative = "2.2.0"
rusty_ffmpeg = { version = "0.16.1+ffmpeg.7.0", features = ["link_system_ffmpeg"] }
