[package]
name = "kpserver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
env_logger = "0.11.5"
log = "0.4.22"
tokio = "1.40.0"
dotenv = "0.15.0"
async-trait = "0.1.82"
strum = "0.26.3"
strum_macros = "0.26.4"
streamhub = { path = "third-parts/harlanc/xiu/library/streamhub" }
rtmp = { path = "third-parts/harlanc/xiu/protocol/rtmp" }
httpflv = { path = "third-parts/harlanc/xiu/protocol/httpflv" }
hls = { path = "third-parts/harlanc/xiu/protocol/hls" }
url = "2.5.2"
